# Rizalina-peaksearch

./: .CMakeLists.txt.swp  .GammaSpectrum.cxx.swp  .README.swp  .it_1.sh.swp  .nfs00000005051ac6ca00000166  .nfs0000000506ee106900000116  CMakeCache.txt  CMakeLists.txt  GammaCountAnalysis.cxx  GammaEvent.h  GammaFitFunction.h  GammaLineAnalysis.cxx  GammaLineAnalysis.h  GammaLineFit.cxx  GammaLineFit.h  GammaProtoFunctions.h  GammaSpectrum.cxx  GammaSpectrum.h  GammaTierHandler.cxx  GammaTierHandler.h  GammaUtilities.h  Makefile  README  README.md  ToDo_Thesis  analysed_spectra.root  bk_cmakelists  cmake_install.cmake  cmakelist_bk  cmakelist_bk2  combine_superwimp_res.sh  combine_superwimp_res.she  compile_run_gamma.sh  create_pseudo_data.py  env  fit200.root  fit200_log.txt  g_lines_bk.txt  g_lines_strong.txt  gammacounts  (+48 more)
binning_0.3/: enrBEGe-Ac228_1588  enrBEGe-Ac228_1588.txt  enrBEGe-Ac228_338  enrBEGe-Ac228_338.txt  enrBEGe-K40_1460  enrBEGe-K40_1460.txt  enrBEGe-K40_1460_MCMC.txt  enrBEGe-K42_1525  enrBEGe-K42_1525.txt  enrBEGe-K42_1525_MCMC.txt  enrBEGe-Kr85_514  enrBEGe-Kr85_514.txt  enrBEGe-Kr85_514_MCMC.txt  enrBEGe-Pa_468  enrBEGe-Pa_468.txt  enrBEGe-Pa_468_MCMC.txt  enrBEGe-Tl208_510  enrBEGe-Tl208_510.txt  enrBEGe-Tl208_510_MCMC.txt  enrBEGe-Tl208_583  enrBEGe-Tl208_583.txt  enrBEGe-Tl208_583_MCMC.txt  enrBEGe-annih_511  enrBEGe-annih_511.txt  enrBEGe-annih_511_MCMC.txt
input/: gamma_kr.txt  gamma_kr_ag.txt  gammas_list.txt  gammas_list_coax_tmp.txt  gammas_list_nat_tmp.txt
py_scripts/: .submit_sens_study.py.swp  analysed_spectra.root  copy_gamma_log.py  copy_gammalogs.py  errorband_hist  example.txt  fit_canv  log_0.txt  log_1545234852.97.txt  log_test_pseudo.txt  submit_gamma_analysis.py  submit_gamma_analysis_limit.py  submit_lim_en.py  submit_limit_calc.py  submit_limit_calc_bege.py  submit_limit_calc_bege_exess.py  submit_limit_calc_qsub_test.py  submit_low_en_test.py  submit_sens_study.py  submit_sens_study_gamma.py  submit_sens_study_iter_based.py  submit_var_woi.py  submit_var_woi_inverse.py  submit_var_woi_qsub_test.py
shell_scripts/: .run_sens_study.sh.swp  analysed_spectra.root  env.txt  errorband_hist  errorband_hist_620  errorband_hist_620_med  fit_canv  fixme_gammalineanalysis_l67  fixme_gammalineanalysis_l67.root  fixme_gammalineanalysis_l67.txt  fixme_gammalineanalysis_l68  fixme_gammalineanalysis_l68_2  limit_600keV_enrBEGe.sh  limit_600keV_enrCoax.sh  lin_fit_1000_101327.sh  lin_fit_2000_60256.sh  lin_fit_200_101319.sh  lin_fit_3000_60284.sh  lin_fit_4000_150624.sh  lin_fit_5000_101282.sh  lin_fit_600_150614.sh  lin_fit_600_90331.sh  lin_fit_650_100002.sh  lin_fit_700_41250.sh  lin_fit_750_41138.sh  lin_fit_800_150204.sh  lin_fit_850_140781.sh  lin_fit_900_101210.sh  lin_fit_950_90345.sh  linfit.root  log_.txt  log_0.txt  log_test_fit.txt  marhists.root  out  out.txt  pseudo_data_22080-superwimp_1300_22080  pseudo_data_22080-superwimp_620_22080  pseudo_data_22080-superwimp_630_22080  run_debug.sh  (+79 more)
